[package]
name = "dataz"
description = "High-throughput generative datasets"
version = "0.4.0"
readme = "README.md"
authors = ["Daniel Harrison"]
license = "Apache-2.0"
repository = "https://github.com/danhhz/dataz"
keywords = ["test", "data", "dataset", "generation"]
categories = ["development-tools::testing"]
edition = "2021"

[features]

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
