# Copyright 2023 Daniel Harrison. All Rights Reserved.

[package]
name = "dataz"
description = "High-throughput generative datasets"
version = "0.4.0"
readme = "README.md"
authors = ["Daniel Harrison"]
license = "Apache-2.0"
repository = "https://github.com/danhhz/dataz"
keywords = ["test", "data", "dataset", "generation"]
categories = ["development-tools::testing"]
edition = "2021"
autobenches = false

# Disable the ability to use benches in the library because the bench harness
# isn't override-able there and the stock one prevents using Criterion specific
# flags, e.g. `cargo bench -p persist -- --baseline=foo`.
[lib]
bench = false

[features]

[[bench]]
name = "benches"
harness = false

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
codspeed-criterion-compat = "2.6.0"
criterion = { version = "0.4.0", default-features = false }
serde_json = "1"
